v0.6.0

- Add dependency directness discovering

v0.5.0

- Migrate to Go 1.7

v0.4.0

- Show license finding errors

v0.3.0

- Add release step to CI Pipeline
- Update installation documentation in README.md

v0.2.0

- Fix ci/prepare.sh script
- Add minor fixes to Makefile and .gitlab-ci.yml
- Add first unit test
- Remove os=freebsd and arch=arm from build platforms

v0.1.0

- Main documentation
- CI configuration
- Basic tests - static analysis and licenses check
- Basic implementation