@@ -1,0 +1,4 @@
+#!/bin/bash
+
+source ./ci/prepare.sh
+bash
